feat: getProfile
